# etl_ctl_financeiro

./: .gitignore  README.md  app.py  main.py  pyproject.toml
src/config/: database.py
src/etl/: extract.py  load.py  transform.py
src/visualization/: dashboard.py
